Updated Links and commit changes

--- a/analysis.html
+++ b/analysis.html
@@ -99,6 +99,10 @@
                             </div>
                         </div>
                     </div>
+
+                
+
+
                 </div>
 
                 <!-- PDF Data Section -->
@@ -109,7 +113,7 @@
                     <div class="card-body">
                         <div class="pdf-container">
                             <div class="list-group">
-                                <a href="https://github.com/2000030787Manogyna/Scientific-data-projectt/blob/main/Sheet%201.pdf" 
+                                <a href="https://public.tableau.com/views/ScientificProject-1sheet1/Sheet1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" 
                                    target="_blank" 
                                    class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
@@ -118,7 +122,7 @@
                                     </div>
                                     <small class="text-muted">Detailed analysis of student attendance patterns and impact</small>
                                 </a>
-                                <a href="https://github.com/2000030787Manogyna/Scientific-data-projectt/blob/main/Sheet%204.pdf" 
+                                <a href="https://public.tableau.com/views/ScientificProject-1sheet4/Sheet4?:language=en-US&publish=yes&:sid=&:display_count=n&:origin=viz_share_link" 
                                    target="_blank" 
                                    class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
@@ -127,7 +131,7 @@
                                     </div>
                                     <small class="text-muted">Impact of teacher quality on student performance</small>
                                 </a>
-                                <a href="https://github.com/2000030787Manogyna/Scientific-data-projectt/blob/main/destination.pdf" 
+                                <a href="https://public.tableau.com/views/ScientificProject-1destination/destination?:language=en-US&publish=yes&:sid=&:display_count=n&:origin=viz_share_link" 
                                    target="_blank" 
                                    class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
@@ -137,7 +141,7 @@
                                     <small class="text-muted">Analysis of parental involvement effects</small>
                                 </a>
                                 
-                                <a href="https://github.com/2000030787Manogyna/Scientific-data-projectt/blob/main/Sheet%202.pdf" 
+                                <a href="https://app.powerbi.com/view?r=eyJrIjoiMGIwNTE2NjYtMWM3Ny00MjUzLThmYjQtZmE2OWZjMmY5ZmZkIiwidCI6IjcwZGUxOTkyLTA3YzYtNDgwZi1hMzE4LWExYWZjYmEwMzk4MyIsImMiOjN9" 
                                    target="_blank" 
                                    class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
@@ -146,7 +150,7 @@
                                     </div>
                                     <small class="text-muted">Analysis of study hours and performance correlation</small>
                                 </a>
-                                <a href="https://github.com/2000030787Manogyna/Scientific-data-projectt/blob/main/Sheet%205.pdf" 
+                                <a href="https://public.tableau.com/app/profile/manogyna.sai.patibandla/viz/ScientificProject-1sheet5/Sheet5?publish=yes" 
                                    target="_blank" 
                                    class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
@@ -155,7 +159,7 @@
                                     </div>
                                     <small class="text-muted">Impact of sleep patterns on academic performance</small>
                                 </a>
-                                <a href="https://github.com/2000030787Manogyna/Scientific-data-projectt/blob/main/Sheet%205.pdf" 
+                                <a href="https://public.tableau.com/views/ScientificProject-1sheet5/Sheet5?:language=en-US&publish=yes&:sid=&:display_count=n&:origin=viz_share_link" 
                                    target="_blank" 
                                    class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
@@ -164,7 +168,7 @@
                                     </div>
                                     <small class="text-muted">Analysis of extracurricular activities impact</small>
                                 </a>
-                                <a href="https://github.com/2000030787Manogyna/Scientific-data-projectt/blob/main/Sheet%204.pdf" 
+                                <a href="https://public.tableau.com/views/ScientificProject-1sheet4/Sheet4?:language=en-US&publish=yes&:sid=&:display_count=n&:origin=viz_share_link" 
                                    target="_blank" 
                                    class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
